--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="cardview_min_height">64dp</dimen>
     <dimen name="padding_text">4dp</dimen>
     <dimen name="titleTextSize">18sp</dimen>
+    <dimen name="cardview_vertical_margin">4dp</dimen>
+    <dimen name="cardview_horizontal_margin">8dp</dimen>
+    <dimen name="divider">1dp</dimen>
 </resources>
