--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="cardview_vertical_margin">4dp</dimen>
     <dimen name="cardview_horizontal_margin">8dp</dimen>
     <dimen name="divider">1dp</dimen>
+    <dimen name="cardview_elevation">2dp</dimen>
 </resources>
