--- a/app/src/main/res/layout/button_navigation.xml
+++ b/app/src/main/res/layout/button_navigation.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<com.example.materialisticmimic.widget.NavFloatingActionButton
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:src="@drawable/ic_gamepad_white_24dp"
+    android:backgroundTint="@android:color/white"
+    app:fabSize="normal"
+    android:tint="?attr/colorAccent"
+    tools:showIn="@layout/activity_item" />
