--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="cardview_horizontal_margin">8dp</dimen>
     <dimen name="divider">1dp</dimen>
     <dimen name="cardview_elevation">2dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="flat_card_horizontal_margin">8dp</dimen>
 </resources>
