--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,10 @@
         <item name="android:textColorSecondary">?android:attr/textColorPrimary</item>
     </style>
 
+    <style name="AppDrawerArrowToggle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">?android:attr/textColorPrimary</item>
+    </style>
+
     <style name="ThemeOverlay.App.Rating" parent="ThemeOverlay.AppCompat.Light">
         <item name="colorAccent">@color/orange400</item>
     </style>
@@ -18,7 +22,6 @@
     </style>
 
     <style name="DrawerTextStyle">
-
         <item name="android:textAppearance">@style/TextAppearance.App.Large</item>
         <item name="android:paddingLeft">16dp</item>
         <item name="android:paddingTop">@dimen/padding</item>
@@ -31,8 +34,18 @@
         <item name="android:layout_height">?android:attr/listPreferredItemHeight</item>
     </style>
 
+    <style name="HeadlineTextStyle">
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Headline</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">@dimen/padding</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+
     <dimen name="padding">8dp</dimen>
     <dimen name="text_size_medium">18sp</dimen>
+    <dimen name="text_size_small">14sp</dimen>
 
     <!-- =========== -->
     <!-- Text Styles -->
@@ -42,7 +55,7 @@
         <item name="android:gravity">center|center_vertical</item>
     </style>
 
-    <style name="textSubtleStyle">
+    <style name="textSubtitleStyle">
         <item name="android:textAppearance">@style/TextAppearance.App.Subtitle</item>
         <item name="android:singleLine">true</item>
         <item name="android:gravity">center_vertical</item>
@@ -54,6 +67,20 @@
     
     <style name="TextAppearance.App.Subtitle" parent="TextAppearance.AppCompat.Caption">
         <item name="android:textSize">?attr/subtitleTextSize</item>
+    </style>
+
+    <style name="textContentStyle">
+        <item name="android:textAppearance">@style/TextAppearance.App.Small</item>
+    </style>
+
+    <style name="TextAppearance.App.Small" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textSize">?attr/contentTextSize</item>
+    </style>
+
+    <style name="AppTextSize">
+        <item name="titleTextSize">@dimen/text_size_medium</item>
+        <item name="subtitleTextSize">@dimen/text_size_small</item>
+        <item name="contentTextSize">@dimen/text_size_small</item>
     </style>
 
 
