--- a/app/src/main/res/values/non_translatable.xml
+++ b/app/src/main/res/values/non_translatable.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="fab_scrolling_view_behavior" translatable="false">com.example.materialisticmimic.FabAwareScrollBehavior</string>
+    <string name="developer_info_text" translatable="false">
+        <![CDATA[
+            <p>
+             Ha Duy Trung
+             <a href="https://twitter.com/hadt">@hadt</a> /
+             <a href="https://github.com/hidroh">Github</a> /
+             <a href="https://hidroh.github.io">Blog</a>
+            </p>
+        ]]>
+    </string>
 </resources>
