--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,6 +55,13 @@
         <item name="android:gravity">center|center_vertical</item>
     </style>
 
+    <style name="textTitleStyle">
+        <item name="android:textAppearance">@style/TextAppearance.App.Title</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingLeft">@dimen/padding</item>
+        <item name="android:paddingRight">@dimen/padding</item>
+    </style>
+
     <style name="textSubtitleStyle">
         <item name="android:textAppearance">@style/TextAppearance.App.Subtitle</item>
         <item name="android:singleLine">true</item>
@@ -64,9 +71,37 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
-    
+
+
+    <style name="textEmptyStyle">
+        <item name="android:textAppearance">@style/TextAppearance.App.Empty</item>
+        <item name="android:padding">@dimen/activity_vertical_margin</item>
+        <item name="android:drawablePadding">@dimen/padding</item>
+        <item name="android:layout_marginLeft">@dimen/activity_horizontal_margin</item>
+        <item name="android:layout_marginRight">@dimen/activity_horizontal_margin</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="textSubtitleStyle.Italic">
+        <item name="android:textAppearance">@style/TextAppearance.App.Subtitle.Italic</item>
+    </style>
+
+    <style name="TextAppearance.App.Title" parent="TextAppearance.AppCompat.Title">
+        <item name="android:textSize">?attr/titleTextSize</item>
+    </style>
+
     <style name="TextAppearance.App.Subtitle" parent="TextAppearance.AppCompat.Caption">
         <item name="android:textSize">?attr/subtitleTextSize</item>
+    </style>
+
+    <style name="TextAppearance.App.Subtitle.Italic">
+        <item name="android:textStyle">italic</item>
+    </style>
+
+    <style name="TextAppearance.App.Empty" parent="TextAppearance.AppCompat.Headline">
+        <item name="android:textColor">?android:attr/textColorSecondary</item>
     </style>
 
     <style name="textContentStyle">
