--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,6 +30,47 @@
         <item name="backgroundDrawerHeader">@drawable/bg_drawer_light</item>
     </style>
 
+    <style name="BaseAppTheme.Dark" parent="Theme.AppCompat.NoActionBar">
+        <!-- color palette -->
+        <item name="colorPrimary">@color/grey900</item>
+        <item name="colorPrimaryDark">@color/blackT87</item>
+        <item name="colorAccent">@color/redA100</item>
+        <item name="colorCardBackground">@color/grey900</item>
+        <item name="colorCardHighlight">@color/grey800</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/whiteT50</item>
+
+        <!-- default theme override -->
+        <item name="android:windowDisablePreview">true</item>
+        <item name="android:textColorTertiary">?android:textColorPrimary</item>
+        <item name="android:textColorLink">?colorAccent</item>
+        <item name="windowActionModeOverlay">true</item>
+        <item name="actionModeBackground">?colorPrimary</item>
+        <item name="alertDialogTheme">@style/AppAlertDialog.Dark</item>
+        <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialog.Dark</item>
+        <item name="preferenceTheme">@style/AppPreferenceThemeOverlay</item>
+        <item name="popupMenuStyle">@style/Widget.AppCompat.PopupMenu.Overflow</item>
+        <item name="drawerArrowStyle">@style/AppDrawerArrowToggle</item>
+
+        <!-- custom themed attributes -->
+        <item name="titleTextSize">@dimen/text_size_medium</item>
+        <item name="subtitleTextSize">@dimen/text_size_small</item>
+        <item name="contentTextSize">@dimen/text_size_small</item>
+        <item name="backgroundDrawerHeader">@drawable/bg_drawer_dark</item>
+    </style>
+
+    <style name="AppTheme" parent="BaseAppTheme">
+    </style>
+
+    <style name="AppTheme.Dark" parent="BaseAppTheme.Dark">
+    </style>
+
+    <style name="AppTheme.Dark.Translucent">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
+
     <!-- =================== -->
     <!-- Alert dialog themes -->
     <!-- =================== -->
